initial - sans functionality

--- a/src/components/MenuItem/style.module.css
+++ b/src/components/MenuItem/style.module.css
@@ -2,13 +2,14 @@
     text-decoration: none !important;
     font-weight: bold;
     color: white;
+    text-shadow: var(--contrast-color) .5px .2px;
 }
 
 .menuItem:hover, .menuItem:active {
     color: gold !important;
 } 
 
-.active {
+.activeItem {
     color: gold !important;
-    
+    text-shadow: black .2px .2px;
 }
