--- a/src/components/ModeItem/style.module.css
+++ b/src/components/ModeItem/style.module.css
@@ -2,3 +2,10 @@
     float: left !important;
     margin-right: 0.5rem !important;
   }
+
+  .activeItem {
+    background-color: var(--secondary-color);
+    color: #192F59 !important ;
+    font-weight: 600;
+    text-shadow: var(--accent-color) .3px .3px;
+}
